# httpcord

./: .gitignore  .isort.cfg  LICENSE  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: FUNDING.yml
examples/: attachment-response.py  auto-defer.py  autocomplete.py  command-groups.py  deferral.py  embed.py  enums.py  ephemeral.py  get-channel.py  get-role.py  get-user.py  guess-number.py  hello-world.py  int-and-float-bounding.py  localiser.py  max-length-string.py  message-command.py  upload-file.py  user-command.py  user-upload-attachment.py
httpcord/: __init__.py  asset.py  attachment.py  avatar.py  bot.py  channel.py  embed.py  enums.py  errors.py  file.py  func_protocol.py  http.py  interaction.py  locale.py  member.py  message.py  role.py  types.py  user.py
httpcord/command/: __init__.py  base.py  types.py
httpcord/utils/: functions.py
