[tool.poetry]
name = "httpcord"
version = "0.2.0"
description = "A Python Discord Interaction bot API wrapper."
authors = ["Isabelle Phoebe <izzy@uwu.gal>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "*"
PyNaCl = "*"
uvicorn = "*"
aiohttp = "*"
python-dateutil = "*"
python = "^3.10"

[tool.poetry.urls]
"Homepage" = "https://github.com/ijsbol/httpcord"
"Bug Tracker" = "https://github.com/ijsbol/httpcord/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | mongo-data
  | _build
  | buck-out
  | build
  | dist
)/
'''